Fix color issue in dark mode

--- a/dash/dash-renderer/src/components/error/menu/DebugMenu.css
+++ b/dash/dash-renderer/src/components/error/menu/DebugMenu.css
@@ -180,8 +180,6 @@
     cursor: pointer;
     font-family: Verdana, sans-serif !important;
     font-weight: bold;
-}
-.dash-debug-menu__button:hover {
     color: black;
 }
 
